tests/baselines/reference/exportDeclarationInInternalModule(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportDeclarationInInternalModule.ts(13,19): error TS1141: String literal expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportDeclarationInInternalModule.ts (1 errors) ====
    class Bbb {
    }
    
    class Aaa extends Bbb { }
    
    namespace Aaa {
        export class SomeType { }
    }
    
    namespace Bbb {
        export class SomeType { }
    
        export * from Aaa;      // this line causes the nullref
                      ~~~
!!! error TS1141: String literal expected.
    }
    
    var a: Bbb.SomeType;
    